--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             z-index: 101;
         }
     </style>
+    //HHMMMMMMM OLHA AQUI!!! meu namo é um genio... hehehe! que bom que conseguiu achar, é facinho po! XD Agora, coloque ali na URL a primeira coisa que fomos! beijo :3
 </head>
 <body>
     <div class="main-stripe">
