--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
         <div class="hint-container" id="hintSection">
             <div class="hint-text">
                 <p>Vixi.... gato nao foi? putz.</p>
-                <p>Ai já não sei.. Será que tem algo a mais pra fazer? Tipo, não sei.. dá uma olhadinha na minha carteira, com toda certeza deve ter alguma pista lá!!! Não esquece de olhar bem a fundo viu. :3 </p>
+                <p>Ai já não sei.. Será que tem algo a mais pra fazer? Tipo, não sei.. dá uma olhadinha na minha carteira, com toda certeza deve ter alguma pista lá!!! </p>
+                <p> Não esquece de olhar bem a fundo viu. :3</p>
             </div>
             <img src="https://media.tenor.com/fARxykRmn70AAAAj/confuso-confuse.gif" class="hint-gif" alt="GIF de confusão">
         </div>
