--- a/index.html
+++ b/index.html
@@ -320,8 +320,7 @@
         });
     </script>
 </body>
+<!-- 
+  Mensagem secreta: HHMMMMMMM OLHA AQUI!!! meu namo é um genio... hehehe! que bom que conseguiu achar, é facinho po! XD Agora, coloque ali na URL a primeira coisa que fomos! beijo :3
+-->
 </html>
-
-
-
-    //HHMMMMMMM OLHA AQUI!!! meu namo é um genio... hehehe! que bom que conseguiu achar, é facinho po! XD Agora, coloque ali na URL a primeira coisa que fomos! beijo :3
