--- a/index.html
+++ b/index.html
@@ -319,6 +319,10 @@
             });
         });
     </script>
+    <div class="secret-message" style="display:none;">
+        <p>✨ HHMMMMMMM OLHA AQUI!!! meu namo é um genio... hehehe!</p>
+        <p>que bom que conseguiu achar, é facinho po! XD Agora, coloque ali na URL a primeira coisa que fomos! beijo :3</p>
+    </div>
 </body>
 <!-- 
   Mensagem secreta: HHMMMMMMM OLHA AQUI!!! meu namo é um genio... hehehe! que bom que conseguiu achar, é facinho po! XD Agora, coloque ali na URL a primeira coisa que fomos! beijo :3
