--- a/vizinhos.html
+++ b/vizinhos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Próxima Fase</title>
+    <title>Eita</title>
     <style>
         body {
             font-family: 'Calibri', cursive, sans-serif;
