--- a/tobi.html
+++ b/tobi.html
@@ -37,7 +37,7 @@
         .eye {
             width: 200px;
             height: 200px;
-            background-image: url('https://media.giphy.com/media/3o7TKA5hqkOqGHQNHi/giphy.gif');
+            background-image: url('assets/images/olho_fechado');
             background-size: cover;
             display: none;
             cursor: pointer;
@@ -45,7 +45,7 @@
         }
         
         .eye:hover {
-            background-image: url('https://media.giphy.com/media/3o7TKA5hqkOqGHQNHi/giphy.gif');
+            background-image: url('assets/images/olho_aberto');
             transform: scale(1.1);
         }
         
