--- a/tobi.html
+++ b/tobi.html
@@ -97,9 +97,9 @@
     <div class="eye" id="eye"></div>
     
     <div class="congratulations" id="congratulations">
-        <h1>PARABÉNS!</h1>
+        <h1>UOU UOU!</h1>
         <div class="confetti" id="confetti"></div>
-        <p class="final-password">Sua senha final é: <strong>MESTREDOSENIGMAS</strong></p>
+        <p class="final-password">Já fiz mistério d+... Ta aqui sua senha: <strong>VOCÊ</strong></p>
         <img src="https://media.giphy.com/media/3o7aD2X9H8bmnLNL4c/giphy.gif" width="200">
         <img src="https://media.giphy.com/media/3o7TKsQ8UQk5JJxPyQ/giphy.gif" width="200">
     </div>
