--- a/tobi.html
+++ b/tobi.html
@@ -37,7 +37,7 @@
         .eye {
             width: 200px;
             height: 200px;
-            background-image: url('assets/images/olho_fechado');
+            background-image: url('assets/images/olho_fechado.png');
             background-size: cover;
             display: none;
             cursor: pointer;
@@ -45,7 +45,7 @@
         }
         
         .eye:hover {
-            background-image: url('assets/images/olho_aberto');
+            background-image: url('assets/images/olho_aberto.png');
             transform: scale(1.1);
         }
         
@@ -99,7 +99,7 @@
     <div class="congratulations" id="congratulations">
         <h1>UOU UOU!</h1>
         <div class="confetti" id="confetti"></div>
-        <p class="final-password">Já fiz mistério d+... Ta aqui sua senha: <strong>VOCÊ</strong></p>
+        <p class="final-password">Já fiz mistério d+... a senha é o que ta sempre na minah cabeça... <strong>VOCÊ</strong></p>
         <img src="https://media.giphy.com/media/3o7aD2X9H8bmnLNL4c/giphy.gif" width="200">
         <img src="https://media.giphy.com/media/3o7TKsQ8UQk5JJxPyQ/giphy.gif" width="200">
     </div>
