--- a/tobi.html
+++ b/tobi.html
@@ -100,8 +100,7 @@
         <h1>UOU UOU!</h1>
         <div class="confetti" id="confetti"></div>
         <p class="final-password">Já fiz mistério d+... a senha é o que ta sempre na minha cabeça... <strong>VOCÊ</strong></p>
-        <img src="https://media.giphy.com/media/3o7aD2X9H8bmnLNL4c/giphy.gif" width="200">
-        <img src="https://media.giphy.com/media/3o7TKsQ8UQk5JJxPyQ/giphy.gif" width="200">
+        <img src="https://media.tenor.com/FwCsuGqREZEAAAAi/bits-8bits.gif" width="200">
     </div>
     
     <script>
