--- a/tobi.html
+++ b/tobi.html
@@ -100,7 +100,7 @@
     <div class="congratulations" id="congratulations">
         <h1>UOU UOU!</h1>
         <div class="confetti" id="confetti"></div>
-        <p class="final-password">Já fiz mistério d+... a senha é o que ta sempre na minah cabeça... <strong>VOCÊ</strong></p>
+        <p class="final-password">Já fiz mistério d+... a senha é o que ta sempre na minha cabeça... <strong>VOCÊ</strong></p>
         <img src="https://media.tenor.com/FwCsuGqREZEAAAAi/bits-8bits.gif" width="200">
     </div>
     
