--- a/texto.html
+++ b/texto.html
@@ -6,7 +6,7 @@
     <title>Meu Coração</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Stuning', cursive, sans-serif;
             background-color: #f5e6ff;
             color: #5a2d82;
             margin: 0;
