--- a/texto.html
+++ b/texto.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>meu coração</h1>
+        <h1>MEU CORAÇÃO</h1>
         <div class="page-number">1/3</div>
     </div>
     
