--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 const walletSection = document.getElementById('walletSection');
                 
                 if (password.toLowerCase() === 'voce') {
-                    window.location.href = 'vizinhos';
+                    window.location.href = 'texto';
                 } else {
                     attempts++;
                     errorMessage.style.display = 'block';
