--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1 mês!!!!!</title>
+    <link rel="icon" href="roxo.png" type="image/png">
     <style>
         body {
             font-family: 'Helvetica', Arial, sans-serif;
